[module] Complete the main part of this module, solve some problem about compilation and json
完成模块主体的编写，解决编译以及json库包含、链接问题

[解决过程]
1.安装、编译高版本cmake
2.安装、编译json库
3.解决代码存在的编译问题
4.解决编译时未查找json头文件的问题，CFLAGS += $(shell pkg-config --cflags json-c)
5.解决未链接json库导致undefined reference to `json_object_new_object'的问题，LDFLAGS += $(shell pkg-config --libs json-c)
6.解决执行程序无法加载动态库的问题error while loading shared libraries，修改查找so动态库的默认文件/etc/ld.so.conf

Change-Id: Ic4c2c19b11bf64fb82c10856a9a26f356901f979

--- a/module/Makefile
+++ b/module/Makefile
@@ -1,1 +1,32 @@
 #compile this daemon process wifid and iterable small program wifi
+CC = gcc
+CFLAGS += -w
+CFLAGS += $(shell pkg-config --cflags json-c)
+LDFLAGS += $(shell pkg-config --libs json-c)
+TARGET = YCL
+PWD := $(shell pwd)
+SRC_FILE := `ls $(PWD)`
+#SRC_CODE = $(wildcard $(PWD)/*.c)
+SRC_CODE = $(filter %.c %.h,$(SRC_FILE))
+COMPILE_SRC =  module.c   module_callback.c module_platform.c log.c
+
+.PHONY: all clean
+
+all: $(TARGET)
+
+$(TARGET) : $(SRC_CODE)
+	#clear
+	#clear
+	echo "CFLAGS = $(CFLAGS)"
+	echo "LDFLAGS = $(LDFLAGS)"
+	$(CC) $(CFLAGS) $(COMPILE_SRC)  -o $@ $(LDFLAGS)
+
+clean :
+	rm -f $(PWD)/$(TARGET)
+
+
+
+#log.c module.c  module_callback.c  module_platform.c
+
+
+
