Fix a bug about json which causes the coredump of program
修复json库使用不当导致的coredump，修复Makefile中变量值错误的问题

Change-Id: Icd550fb16119e1830bf19ed23894d76b205f3a1e

--- a/module/Makefile
+++ b/module/Makefile
@@ -4,8 +4,8 @@ CFLAGS += -w
 CFLAGS += $(shell pkg-config --cflags json-c)
 LDFLAGS += $(shell pkg-config --libs json-c)
 TARGET = YCL
-PWD := $(shell pwd)
-SRC_FILE := `ls $(PWD)`
+PWD = $(shell pwd)
+SRC_FILE = $(shell ls $(PWD))
 #SRC_CODE = $(wildcard $(PWD)/*.c)
 SRC_CODE = $(filter %.c %.h,$(SRC_FILE))
 COMPILE_SRC =  module.c   module_callback.c module_platform.c log.c
@@ -15,14 +15,15 @@ COMPILE_SRC =  module.c   module_callback.c module_platform.c log.c
 all: $(TARGET)
 
 $(TARGET) : $(SRC_CODE)
-	#clear
-	#clear
-	echo "CFLAGS = $(CFLAGS)"
-	echo "LDFLAGS = $(LDFLAGS)"
+	@clear
+	@echo "SRC_FILE = $(SRC_FILE)"
+	@echo "SRC_CODE = $(SRC_CODE)"
+	@echo "CFLAGS = $(CFLAGS)"
+	@echo "LDFLAGS = $(LDFLAGS)"
 	$(CC) $(CFLAGS) $(COMPILE_SRC)  -o $@ $(LDFLAGS)
 
 clean :
-	rm -f $(PWD)/$(TARGET)
+	rm -f $(PWD)/$(TARGET)*
 
 
 
