Using default author name for creating some new files
暂时先使用默认author名创建文件，后续完善

Change-Id: I70314b1c19b0899c902057c1f85b919ca269d478

--- a/module/Makefile
+++ b/module/Makefile
@@ -23,7 +23,7 @@ $(TARGET) : $(SRC_CODE)
 	$(CC) $(CFLAGS) $(COMPILE_SRC)  -o $@ $(LDFLAGS)
 
 clean :
-	rm -f $(PWD)/$(TARGET)*
+	rm -f $(PWD)/$(TARGET)* $(PWD)/.pid $(PWD)/*.pid
 
 
 
