Solve all warnings when compile
解决所有编译warning

valgrind ./YCL确认没有内存泄漏

Change-Id: If3b48c513cd89cd38279b3ccbf64ba367f2f70e8

--- a/module/Makefile
+++ b/module/Makefile
@@ -1,6 +1,6 @@
 #compile this daemon process wifid and iterable small program wifi
 CC = gcc
-CFLAGS += -w
+CFLAGS += -Wall
 CFLAGS += $(shell pkg-config --cflags json-c)
 LDFLAGS += $(shell pkg-config --libs json-c)
 TARGET = YCL
@@ -8,7 +8,7 @@ PWD = $(shell pwd)
 SRC_FILE = $(shell ls $(PWD))
 #SRC_CODE = $(wildcard $(PWD)/*.c)
 SRC_CODE = $(filter %.c %.h,$(SRC_FILE))
-COMPILE_SRC =  module.c   module_callback.c module_platform.c module_common.c log.c
+COMPILE_SRC = module.c module_callback.c module_platform.c module_common.c log.c
 
 .PHONY: all clean
 
@@ -20,7 +20,7 @@ $(TARGET) : $(SRC_CODE)
 	@echo "SRC_CODE = $(SRC_CODE)"
 	@echo "CFLAGS = $(CFLAGS)"
 	@echo "LDFLAGS = $(LDFLAGS)"
-	$(CC) $(CFLAGS) $(COMPILE_SRC)  -o $@ $(LDFLAGS)
+	$(CC) $(CFLAGS) $(COMPILE_SRC) -o $@ $(LDFLAGS)
 
 clean :
 	rm -f $(PWD)/$(TARGET)* $(PWD)/.pid $(PWD)/*.pid
