Rename this program to MODULE
修改模块名称为MODULE，同时将author中的空格替换为下划线

Change-Id: Id4fa983ad697f2b538a386c88d770aed3db58ec2

--- a/module/Makefile
+++ b/module/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 CFLAGS += -Wall
 CFLAGS += $(shell pkg-config --cflags json-c)
 LDFLAGS += $(shell pkg-config --libs json-c)
-TARGET = YCL
+TARGET = MODULE
 PWD = $(shell pwd)
 SRC_FILE = $(shell ls $(PWD))
 #SRC_CODE = $(wildcard $(PWD)/*.c)
