Add platform code to encapsule
修改makefile，添加platform函数

Change-Id: Ieab1b19cc4a39e05c6b25c73306d9c8ea35104a1

--- a/module/Makefile
+++ b/module/Makefile
@@ -1,8 +1,10 @@
-#compile this daemon process wifid and iterable small program wifi
+#compile this program MODULE and iterable small program module
+.PHONY: all clean
 CC = gcc
 CFLAGS += -Wall
 CFLAGS += $(shell pkg-config --cflags json-c)
 LDFLAGS += $(shell pkg-config --libs json-c)
+
 TARGET = MODULE
 PWD = $(shell pwd)
 SRC_FILE = $(shell ls $(PWD))
@@ -10,20 +12,28 @@ SRC_FILE = $(shell ls $(PWD))
 SRC_CODE = $(filter %.c %.h,$(SRC_FILE))
 COMPILE_SRC = module.c module_callback.c module_platform.c module_common.c log.c
 
-.PHONY: all clean
+PLATFORM_TARGET = platform
+PLATFORM_OBJECT = $(PLATFORM_TARGET).o
+PLATFORM_DIR = $(PWD)/platform_src
+PLATFORM_SRC = $(PLATFORM_DIR)/platform.c
+PLATFORM_CFLAGS = -Wall -I$(PLATFORM_DIR)
 
 all: $(TARGET)
 
-$(TARGET) : $(SRC_CODE)
+$(PLATFORM_TARGET) : $(PLATFORM_DIR)/*
+	$(CC) -c $(PLATFORM_SRC) $(PLATFORM_CFLAGS)
+
+
+$(TARGET) : $(PLATFORM_TARGET) $(SRC_CODE)
 	@clear
 	@echo "SRC_FILE = $(SRC_FILE)"
 	@echo "SRC_CODE = $(SRC_CODE)"
 	@echo "CFLAGS = $(CFLAGS)"
 	@echo "LDFLAGS = $(LDFLAGS)"
-	$(CC) $(CFLAGS) $(COMPILE_SRC) -o $@ $(LDFLAGS)
+	$(CC) $(CFLAGS) $(COMPILE_SRC) $(PLATFORM_OBJECT) -o $@ $(LDFLAGS)
 
 clean :
-	rm -f $(PWD)/$(TARGET)* $(PWD)/.pid $(PWD)/*.pid
+	rm -f $(PWD)/$(TARGET)* *.o
 
 
 
