Fix an unexpected compilation when execute make command
修复PLATFORM_TARGET是伪目标导致的每次make一定会重新编译所有代码的问题

Change-Id: I8b9d41cd9ec19584997a17e0ba2966afaa21b26d

--- a/module/Makefile
+++ b/module/Makefile
@@ -20,16 +20,17 @@ PLATFORM_CFLAGS = -Wall -I$(PLATFORM_DIR)
 
 all: $(TARGET)
 
-$(PLATFORM_TARGET) : $(PLATFORM_DIR)/*
-	$(CC) -c $(PLATFORM_SRC) $(PLATFORM_CFLAGS)
+#$(PLATFORM_TARGET) : $(PLATFORM_DIR)/*
+#	$(CC) -c $(PLATFORM_SRC) $(PLATFORM_CFLAGS)
 
 
-$(TARGET) : $(PLATFORM_TARGET) $(SRC_CODE)
+$(TARGET) : $(SRC_CODE) $(PLATFORM_DIR)/*
 	@clear
 	@echo "SRC_FILE = $(SRC_FILE)"
 	@echo "SRC_CODE = $(SRC_CODE)"
 	@echo "CFLAGS = $(CFLAGS)"
 	@echo "LDFLAGS = $(LDFLAGS)"
+	$(CC) -c $(PLATFORM_SRC) $(PLATFORM_CFLAGS)
 	$(CC) $(CFLAGS) $(COMPILE_SRC) $(PLATFORM_OBJECT) -o $@ $(LDFLAGS)
 
 clean :
