调整打印格式和代码格式，去掉无用代码和固定路径，防止路径变化导致程序无法运行
[Makefile新增规则]
在Makefile中新增字符串宏用于编译时，需要使用转义符包裹字符串，如\"$(PWD)/\"，否则编译会报错。

Change-Id: I1b6705208dd4f7f9bb821a5203ec33a96915f851

--- a/module/Makefile
+++ b/module/Makefile
@@ -9,16 +9,20 @@ LDFLAGS += $(shell pkg-config --libs json-c)
 
 TARGET = MODULE
 PWD = $(shell pwd)
+AUTHOR = $(shell ls /home)
 SRC_FILE = $(shell ls $(PWD))
 #SRC_CODE = $(wildcard $(PWD)/*.c)
 SRC_CODE = $(filter %.c %.h,$(SRC_FILE))
 COMPILE_SRC = module.c module_callback.c module_platform.c module_common.c log.c
 
+CFLAGS += -DMODULE_CODE_DIR=\"$(PWD)/\"
+CFLAGS += -DDEFAULT_AUTHOR_NAME=\"$(AUTHOR)\"
+
 PLATFORM_TARGET = platform
 PLATFORM_OBJECT = $(PLATFORM_TARGET).o
 PLATFORM_DIR = $(PWD)/platform_src
 PLATFORM_SRC = $(PLATFORM_DIR)/platform.c
-PLATFORM_CFLAGS = -Wall -I$(PLATFORM_DIR)
+PLATFORM_CFLAGS = -Wall -I$(PLATFORM_DIR) -I$(PWD)
 
 ifdef CONFIG_AUTHOR_NAME_SUPPORT
 ifeq ($(CONFIG_AUTHOR_NAME_SUPPORT),y)
@@ -53,4 +57,4 @@ endif
 $(CONFIG_FILE):
 
 clean :
-	rm -f $(PWD)/$(TARGET)* *.o *.cfg Readme
+	rm -f $(PWD)/$(TARGET)* *.o $(TARGET).cfg Readme
