把配置文件加入.o文件依赖项，在配置文件更新时重编所有代码
Change-Id: I359a99055fe0c3b6751e6ec406cd458dd56d4574

--- a/module/Makefile
+++ b/module/Makefile
@@ -39,7 +39,7 @@ $(TARGET) : $(OBJS)
 	@echo "LDFLAGS = $(LDFLAGS)"
 	$(CC) $(CFLAGS) $(OBJS) -o $@ $(LDFLAGS)
 
-%.o : %.c %.h
+%.o : %.c %.h $(CONFIG_FILE)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean :
